# sotest

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  test.sc
